# wsj-scraper

./: LICENSE  Makefile  main.py  pyproject.toml
.github/workflows/: codeql.yml
src/: main.py
test/: test.py
tests/: test.py
