[tool.poetry]
name = "wsj-scraper"
version = "0.1.0"
description = "scrapes wall street journal news headlines"
authors = ["trendyllama <143849158+trendyllama@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
